--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.18.4",
+    "@auth/drizzle-adapter": "^0.3.9",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -19,6 +21,7 @@
     "drizzle-orm": "^0.29.0",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
+    "next-auth": "5.0.0-beta.4",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
