--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.0",
     "lucide-react": "^0.293.0",
+    "moment": "^2.29.4",
     "next": "14.0.3",
     "next-auth": "5.0.0-beta.4",
     "pg": "8.10.0",
