link section and dropzone installed

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-drag-drop-files": "^2.3.10",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.0",
     "react-quill": "^2.0.0",
     "server-only": "^0.0.1",
