--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@edgestore/server": "^0.1.6",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -29,12 +31,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.1",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.0",
     "lucide-react": "^0.293.0",
     "moment": "^2.29.4",
     "next": "14.0.3",
     "next-auth": "5.0.0-beta.4",
+    "next-themes": "^0.2.1",
     "pg": "8.10.0",
     "postgres": "^3.4.3",
     "react": "^18",
@@ -45,6 +49,7 @@
     "react-quill": "^2.0.0",
     "server-only": "^0.0.1",
     "shx": "^0.3.4",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
