--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18",
     "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^14.2.3",
+    "react-easy-sort": "^1.6.0",
     "react-hook-form": "^7.49.0",
     "react-quill": "^2.0.0",
     "server-only": "^0.0.1",
@@ -52,6 +53,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
@@ -59,6 +61,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.6",
     "eslint": "^8",
