--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@auth/core": "^0.18.4",
     "@auth/drizzle-adapter": "^0.3.9",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
     "@hookform/resolvers": "^3.3.2",
